--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
 	</parent>
 	<groupId>com.portal</groupId>
 	<artifactId>datamig</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>dmui</version>
+	<packaging>war</packaging>
 	<name>datamig</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+	<java.version>17</java.version>
 	</properties>
 	<repositories>
 		
@@ -32,6 +33,11 @@
 		
 	<dependencies>
 
+<dependency>  
+<groupId>org.springframework.boot</groupId>  
+<artifactId>spring-boot-starter-tomcat</artifactId>  
+<scope>provided</scope>  
+</dependency>
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
@@ -45,7 +51,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+<dependency>           
+ <groupId>org.jasypt</groupId>
+ <artifactId>jasypt</artifactId>           
+  <version>1.9.3</version>            
+  <scope>compile</scope>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
